--- a/homepage.html
+++ b/homepage.html
@@ -33,6 +33,7 @@
                 <a href="">CONTACT US</a>
             </nav>
             
+            <!-- putem folosi <nav> si aici, e corect din punct de vede structural -->
             <div class="menu-mobile">
                 <i class="fas fa-bars"></i>
             </div>
@@ -46,6 +47,7 @@
                 <div class="project-location">concert hall <br> in new york</div>
                 <div class="project-type-1">architecture</div>
 
+                <!-- aici nu merge schema asta, adica merge, dar e prea usor sa adaptam centrand ca sa merite continutul duplicat -->
                 <div class="mobile-content">
                     <div class="project-location-mobile">concert hall <span>in new york</span></div>
                     <div class="project-type-mobile">architecture</div>
@@ -130,6 +132,7 @@
             </form>
 
             <div class="submit-button">
+                <!-- avem nevoie de button ca si child node pe form, ne va fi mult mai usor la submit cand manipulam datele cu JS -->
                 <button type="submit">SEND </button>
                 <i class="fas fa-long-arrow-alt-right"></i>
             </div>
