--- a/homepage.html
+++ b/homepage.html
@@ -51,12 +51,13 @@
                     <a href="">CONTACT US</a>
                 </div>
 
-                <div class="menu-social-icons">
-                    <i class="fab fa-instagram-square"></i>
-                    <i class="fab fa-facebook-f"></i>
-                </div>  
-
-                <hr>  
+                <div class="icons-position">
+                    <div class="menu-social-icons">
+                        <i class="fab fa-instagram-square"></i>
+                        <i class="fab fa-facebook-f"></i>
+                    </div>  
+                    <hr>  
+                </div>    
             </div>
             
             <div class="title">PROJECTS</div>
