--- a/homepage.html
+++ b/homepage.html
@@ -70,6 +70,7 @@
 
         <div class="container-fluid">
             <div class="row">
+                <!-- atentie, pe mobile pierdem centrarea aici, avem centrare orizontala si verticala pt location si type -->
                 <div class="col-lg-4 col-sm-6 content-wrapper">
                     <div class="black-overlay"></div>
                     <div class="project-location">concert hall <span>in new york</span></div>
@@ -133,6 +134,7 @@
                     </div>
                 </div>
             </form>
+            <!-- nu cred ca este necesar codul duplicat aici, putem avea un signur form si doar sa lucram la layout -->
             <form class="container mobile-form">
                 <div class="row">
                     <div class="form-group col-lg-4 col-sm-12"> 
