--- a/homepage.html
+++ b/homepage.html
@@ -114,34 +114,18 @@
                 <div>get <span>in touch</span></div>
             </div>   
 
-            <form class="container desktop-form">
+            <form class="container">
                 <div class="row">
-                    <div class="form-group col-lg-4 col-sm-12"> 
+                    <div class="form-group col-lg-4 col-sm-12 m-0"> 
                         <input class="form-control" required type="text" name="yourName" id="firstName" placeholder="Name">
                         <input class="form-control" required type="number" name="yourNumber" id="yourNumber" placeholder="Phone">
                     </div>
-                    <div class="form-group col-lg-4 col-sm-12">
+                    <div class="form-group col-lg-4 col-sm-12 m-0">
                         <input class="form-control" required type="email" name="yourEmail" id="yourEmail" placeholder="E-mail">
                         <input class="form-control" required type="text" name="yourCompany" id="yourCompany" placeholder="Company">
                     </div>
                 
-                    <div class="form-group col-lg-4 col-sm-12">
-                        <textarea class="form-control" required name="message" id="message" placeholder="Message"></textarea>
-                    </div>
-                    <div class="submit-button">
-                        <button type="submit" class="btn">SEND </button>
-                        <i class="fas fa-long-arrow-alt-right"></i>
-                    </div>
-                </div>
-            </form>
-            <!-- nu cred ca este necesar codul duplicat aici, putem avea un signur form si doar sa lucram la layout -->
-            <form class="container mobile-form">
-                <div class="row">
-                    <div class="form-group col-lg-4 col-sm-12"> 
-                        <input class="form-control" required type="text" name="yourName" id="firstName" placeholder="Name">
-                        <input class="form-control" required type="number" name="yourNumber" id="yourNumber" placeholder="Phone">
-                        <input class="form-control" required type="email" name="yourEmail" id="yourEmail" placeholder="E-mail">
-                        <input class="form-control" required type="text" name="yourCompany" id="yourCompany" placeholder="Company">
+                    <div class="form-group col-lg-4 col-sm-12 m-0">
                         <textarea class="form-control" required name="message" id="message" placeholder="Message"></textarea>
                     </div>
                     <div class="submit-button">
